# BalanceAssessment

./: README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/: __init__.py  main.py
src/analyzing/: __init__.py  age_group_predictor.py  bds_analyzer.py
src/processing/: __init__.py  bds_convert_hf5.py
src/visualizing/: __init__.py  app.py  plot_utils.py
