[tool.poetry]
name = "balance assessment"
version = "0.1.0"
description = ""
authors = ["SiGran <simongrannetia@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
narwhals = "^1.27.1"
polars = "^1.22.0"
h5py = "^3.13.0"
plotly = "^6.0.0"
streamlit = "^1.42.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
